# careerfit-agent

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  CODE_WIKI.md  DEPLOY.md  README.md  TODOS.md  docker-compose.frontend-only.yml  docker-compose.yml  package-lock.json  package.json  playwright.config.ts  render.yaml  restart-backend.bat  ua-dashboard-snapshot.txt  代码审查报告.md  性能优化方案.md
backend/: .gitignore  Dockerfile  import_seeds.py  pyproject.toml  requirements.txt  test_react_regex.py
backend/app/: main.py
backend/app/agents/: graph.py  langgraph_runner.py  nodes.py  state.py  workflow_mode.py
backend/app/api/: error_handlers.py
backend/app/core/: config.py  constants.py  (+3 more)
backend/careerfit_agent_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
backend/seeds/: backend_dev.json  data_analysis.json  frontend_fullstack.json  llm_app_dev.json
backend/tests/: conftest.py  test_agent_schemas.py  test_analysis_cache.py  test_analysis_flow.py  test_api_routes.py  test_data_analysis_dimension_extraction.py  test_export_api.py  test_file_parser.py  test_health.py  test_integrity_guard.py  test_interview_api.py  test_interview_service.py  test_job_compare_api.py  test_job_service.py  test_jobs_api.py  test_knowledge_api.py  test_langgraph_runner.py  test_learning_api.py  test_llm_agent_flow.py  test_llm_client.py  test_multi_agent_llm_flow.py  test_preview_api.py  test_rag_agent_node.py  test_rag_relevance_filtering.py  test_rag_retrieval.py  test_report_history_api.py  test_resume_diff_api.py  test_resume_service.py  test_resume_upload_api.py  test_resumes_api.py  test_scoring.py  test_scoring_with_rag.py
(+221 files in other folders)
