[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "careerfit-agent-backend"
version = "0.2.0"
description = "CareerFit Agent Phase 1 backend"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.29",
  "pydantic>=2.7",
  "pydantic-settings>=2.2",
  "httpx>=0.27",
  "sqlalchemy>=2.0",
  "psycopg2-binary>=2.9",
  "pgvector>=0.2",
  "langgraph>=0.2.0",
  "sentence-transformers>=2.6",
  "pdfplumber>=0.11",
  "python-docx>=1.2"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "ruff>=0.4"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
